# meteo-top

./: .gitignore  CMakeLists.txt  README.md
include/: CURLCommunicationChannel.hpp  DisplayData.hpp  PeriodicRequest.hpp  PeriodicTask.hpp  yaml_cpp.hpp
src/: CURLCommunicationChannel.cpp  PeriodicRequest.cpp  PeriodicTask.cpp  YamlCPP.cpp  main.cpp
tests/: CMakeLists.txt  CURLCommunicationChannel_test.cpp
tests/src-test/: PeriodicRequest_test.cpp
